# robot_cali

./: Dockerfile-noetic  README.md  scorbot_v3_added.xacro  untitled.dae
Masters Thesis/: Discord.odt  LiDAR.odt  Literature Links.odt  RTAB-MAP Links.odt
Masters Thesis/Literature/: Literature Links.odt
Masters Thesis/PHYSICAL ROBOTS/: Physical Robots.odt
Masters Thesis/Presentations/: Path Planning(12-29-21).pptx
Masters Thesis/THESIS STRUCTURE/: Thesis Structure.odt
Masters Thesis/URDF/: URDF Links.odt
Masters Thesis/Writing/: ABSTRACT.odt  Background.odt  Introduction.odt  KF and EKF.odt  LiDAR.odt  NVIDIA Jetson.odt  Obstacle Detection and Avoidance Algorithm.odt  Particle Filter.odt  Point Clouds.odt  ROS.odt  Raspberry Pi.odt  Recursive Bayesian Estimation.odt  SLAM.odt  Sensors.odt  TF in ROS.odt
arduino_codes/: CMakeLists.txt  package.xml
arduino_codes/src/: Demo.ino  motor_driver.ino  motor_driver_v2.ino  tick_counter.ino
cali_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
cali_moveit_config/config/: joint_limits.yaml  simple_moveit_controllers.yaml  ur3e.srdf
cali_moveit_config/launch/: cali_planning_execution.launch  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
cali_project_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
cali_project_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  ompl_planning.yaml  (+2 more)
docker_ros/: docker-compose.yaml  dockerfile_cali  dockerfile_ros_melodic
instructions/: README.md
manipulation/: CMakeLists.txt  package.xml
perception/: CMakeLists.txt  package.xml
real_robot/: CMakeLists.txt  package.xml
rover_autonav/: CMakeLists.txt  package.xml
rover_autonav/2D_Pose_Estimate/: 2D_Pose_Estimate.yaml
rover_autonav/cali_urdf/: CMakeLists.txt  package.xml
rover_autonav/cali_urdf/config/: joint_names_cali_urdf.yaml
rover_autonav/cali_urdf/launch/: display.launch  gazebo.launch
rover_autonav/cali_urdf/urdf/: cali_urdf.csv  cali_urdf.urdf
rover_autonav/config/: costmap_common.yaml  costmap_global_static.yaml  costmap_local.yaml  joint_names_rover_autonav.yaml  planners.yaml
rover_autonav/config/carlike/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
rover_autonav/config_jk/: costmap_common.yaml  costmap_global_static.yaml  costmap_local.yaml  planners.yaml
rover_autonav/inertias/: README.md
rover_autonav/launch/: Zero_gravity.launch  arm_fixed_to_ground.launch  cali.launch  cali_description.launch  cali_ecst_lab.launch  camera_spawned.launch  display.launch  display_combined.launch  display_combined_v2.launch  display_v2.launch  gazebo.launch  gazebo_combined.launch  gazebo_combined_v2.launch  gazebo_combined_v3.launch  gazebo_combined_v4.launch  gazebo_combined_v5.launch  gazebo_v3.launch  gazebo_v4.launch  localization.launch  localization_ecst_lab.launch  localization_v2.launch  mapping.launch  nav_test.launch  navigation.launch  navigation_dwa.launch  navigation_ecst_lab.launch  navigation_srv_server.launch  navigation_teb_tut_values.launch  navigation_v2.launch  orientation.launch  rosbob_gazebo.launch  slam_gmapping.launch  spawn_cali.launch  spawn_cali_ecst_lab.launch  spawn_cali_simple.launch  start_control_simple.launch  start_world_simple.launch  test_optim_node.launch  vis_marker.launch
rover_autonav/launch/config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  planner_global.yaml  planner_teb.yaml
rover_autonav/maps/: Sandbox.yaml  WoodenBox.yaml  ecst_lab_map.pgm  ecst_lab_map.yaml  ecst_lab_map_updated.pgm  ecst_lab_map_updated.yaml  ecst_thermal_lab.yaml  real_updated.yaml  real_updated_v3.yaml  real_updated_v4.yaml  real_with_table.yaml
rover_autonav/meshes/: CALI_TABLE_MODEL.stl  base_link.STL  lbacklink.STL  rbacklink.STL  rfrontlink.STL
rover_autonav/meshes_v2/: FL_link.STL  FR_link.STL  RL_link.STL  RR_link.STL  wheel.STL
rover_autonav/nodes/: visualization.cpp
rover_autonav/params/: goal_poses.yaml
rover_autonav/rviz_config/: arm_fixed_to_ground.rviz  display_v2.rviz  gazebo_combined_v3.rviz  localization_v2.rviz  mapping.rviz  navigation_teb.rviz  navigation_v2.rviz  navigation_v2_grid.rviz  rosbob_description.rviz
rover_autonav/src/: inertia_calculator.py  main_navigation.py  navigation.py
rover_autonav/srv/: GoToPoi.srv
rover_autonav/urdf/: cali_fixed_to_ground.xacro  cali_fixed_to_ground_v2.xacro  cali_urdf.urdf  cali_urdf_complete.xacro  cali_urdf_complete_v2.xacro  cali_urdf_complete_v3.xacro  rosbob.gazebo  rosbob.xacro  rosbob_v1.xacro  rosbob_v2.xacro  rosbob_v3.gazebo  rosbob_v3.xacro  rosbob_v3_1.xacro  rosbob_v4.gazebo  rosbob_v4.xacro  rosbob_v5.xacro  rover_autonav.csv  rover_autonav.urdf  rover_autonav_skid.urdf  rover_autonav_skid_v2.urdf  rover_autonav_skid_v3.urdf  world.xacro
rover_autonav/world/: Zero_gravity.world  ecst_lab.world  real_ecst.world  real_world.world  test_perception_ecst_table.world  test_perception_ecst_table_v2.world  test_perception_ecst_table_v3.world
rover_autonav/world/building_editor_models/coke_can/: model.config
rover_control/: CMakeLists.txt  package.xml
studying_gazebo/: CMakeLists.txt  package.xml
surface_perception/: .ycm_extra_conf.py  CHANGELOG.rst  CMakeLists.txt  README.md  mainpage.dox  package.xml  rosdoc.yaml
surface_perception/include/surface_perception/: axes_marker.h  object.h  segmentation.h  shape_extraction.h  surface.h  surface_finder.h  surface_history_recorder.h  surface_objects.h  typedefs.h  visualization.h
surface_perception/src/: axes_marker.cpp  demo_main.cpp  segmentation.cpp  shape_extraction.cpp  surface_finder.cpp  surface_history_recorder.cpp  visualization.cpp
surface_perception/test/: rotation_matrix_test.cpp
(+84 files in other folders)
