<?xml version="1.0"?>
<package>
  <name>surface_perception</name>
  <version>1.0.3</version>
  <description>Simple library for segmentation of tabletop and shelf surfaces</description>

  <maintainer email="jstn@cs.washington.edu">Justin Huang</maintainer>
  <author email="pengy25@cs.washington.edu">Yu-Tang Peng</author>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/surface_perception</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
